--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,31 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  try-hard:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/openjdk:11.0.12
+    environment:
+      JVM_OPTS: -Xmx3200m
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run: ./gradlew clean build
+      - store_test_results:
+          path: build/test-results
+      - store_artifacts:
+          path: build/reports/tests/test
+          destination: test_result
+
+      - store_artifacts:
+          path: build/reports/jacoco
+          destination: test_coverage
+
+      - store_artifacts:
+          path: build/reports/pmd
+          destination: pmd
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +49,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+  try-this:
+    jobs:
+      - say-hello
+      - try-hard
