--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,10 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+#Add the orbs stanza below your version, invoking the orb
+orbs:
+  gradle: circleci/gradle@3.0.0
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -21,7 +25,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/openjdk:11.0.12
+      - image: cimg/openjdk:17.0.2
     environment:
       JVM_OPTS: -Xmx3200m
     # Add steps to the job
