This is a commit that has an updated build.gradle. Local tests work and will check if circle ci can work off the gradle tasks provided

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,15 @@ test {
 }
 
 
+
+
+jar{
+    manifest{
+        attributes 'Main-Class': 'main.java.ATMTest.Main'
+
+    }
+}
+
 //Define the main class for the application
 
 mainClassName = 'ATMTest.Main'
